<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/enter_background"
        tools:context=".ui.enter.RegistrationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_back"
                style="@style/left_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_back"
                app:layout_constraintBottom_toBottomOf="@id/ic_back"
                app:layout_constraintStart_toEndOf="@id/ic_back"
                app:layout_constraintTop_toTopOf="@id/ic_back" />

            <TextView
                android:id="@+id/label"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_registration"
                app:layout_constraintBottom_toBottomOf="@id/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ic_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_auth_layout"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_user_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/input_text_background"
                android:hint="@string/text_fio"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_delivery_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/input_text_background"
                android:hint="@string/text_delivery_city"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_delivery_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:drawableEnd="@drawable/ic_map"
                android:background="@drawable/input_text_background"
                android:hint="@string/text_delivery_address"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                style="@style/nextButtonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_next_button_selector"
                android:text="@string/text_to_order" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>
</layout>
